--- a/index.html
+++ b/index.html
@@ -2,21 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Полезные бизнес советы" />
-    <title>Эфективные решения для вашего бизнеса</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>"Эфекстиное решение для вашего бизнеса"</title>
 </head>
 <body>
+    <section class="main-paige">
+        <div class="wrapper">
+            <header>
+               <a href="/index.html" class="logo-text">WebStudio</a> 
+                <nav>
+                    <ul>
+                        <li><a href="/">Студия</a></li>
+                        <li><a href="/">Портфолио</a></li>
+                        <li><a href="/">Контакты</a></li>
+
+                        
+                    </ul>
+                    <ul>
+                        <li><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
+                        <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+                    </ul>
+                </nav>
+            </header>
+
+        </div>
+    </section>
+    
 
 </body>
-<footer>
-
-</footer>
-
-
-
-
-
-
-
-
 </html>
