Завершил секцию меин пейдж
сделал главное название и кнопку

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                     </ul>
                 </nav>
             </header>
-
+        </div>
+        <div class="main-page-row">
+         <h1 class="business-solutions">Эффективные решения для вашего бизнеса</h1>
+         <button class="service-order">Заказать услугу</button>
         </div>
     </section>
     
