--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2 class="company-advantages-title">Пунктуальность</h2>
                 <p class="company-advantages-descr">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-            <div class="company-advantages-item">
+            <li>
                 <h2 class="company-advantages-title">Планирование</h2>
                 <p class="company-advantages-descr">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
@@ -43,7 +43,7 @@
                 <p class="company-advantages-descr">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
-        <div class="our activities">
+        <section class="our activities">
             <h3>Чем мы занимаемся</h3>
             <ul>
                 <li>
@@ -56,8 +56,8 @@
                     <img src="./image/business3.jpg" width="370" alt="цвета в приложении">
                 </li>
             </ul>
-        </div>
-        <div class="our team">
+        </section>
+        <section class="our team">
             <h4>Наша команда</h4>
             <ul>
                 <li>
@@ -97,7 +97,7 @@
                     </figure>
                 </li>
             </ul>
-        </div>
+        </section>
     </main>
     <footer>
         <a href="/index.html">WebStudio</a>
