--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="rus">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,26 +23,30 @@
     </header>
         
     <main>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
-        <ul>
-            <li>
-                <h3 class="company-advantages-title">Внимание к деталям</h3>
-                <p class="company-advantages-descr">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li>
-                <h3 class="company-advantages-title">Пунктуальность</h3>
-                <p class="company-advantages-descr">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
-            <li>
-                <h3 class="company-advantages-title">Планирование</h3>
-                <p class="company-advantages-descr">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
-            <li>
-                <h3 class="company-advantages-title">Современные технологии</h3>
-                <p class="company-advantages-descr">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-        </ul>
+       <section class="main-page">
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
+        <section class="advantage">
+            <ul>
+                <li>
+                    <h3 class="company-advantages-title">Внимание к деталям</h3>
+                    <p class="company-advantages-descr">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3 class="company-advantages-title">Пунктуальность</h3>
+                    <p class="company-advantages-descr">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                 <li>
+                 <h3 class="company-advantages-title">Планирование</h3>
+                 <p class="company-advantages-descr">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3 class="company-advantages-title">Современные технологии</h3>
+                    <p class="company-advantages-descr">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
         <section class="our activities">
             <h2>Чем мы занимаемся</h2>
             <ul>
@@ -61,40 +65,24 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <figure>
-                        <img src="./image/фото1.jpg" width="270" alt="фото Игоря">
-                        <figcaption>
-                            Игорь Демьяненко
-                            <p>Product Designer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./image/фото1.jpg" width="270" alt="фото Игоря">
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./image/фото2.jpg" width="270" alt="фото Ольги">
-                        <figcaption>
-                            Ольга Репина
-                            <p>Frontend Developer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./image/фото2.jpg" width="270" alt="фото Ольги">
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./image/фото3.jpg" width="270" alt="фото Николая">
-                        <figcaption>
-                            Николай Тарасов
-                            <p>Marketing</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./image/фото3.jpg" width="270" alt="фото Николая">
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./image/фото4.jpg" width="270" alt="фото Михаила">
-                        <figcaption>
-                            Михаил Ермаков
-                            <p>UI Designer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./image/фото4.jpg" width="270" alt="фото Михаила">
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -102,8 +90,8 @@
     <footer>
         <a href="/index.html">WebStudio</a>
         <address>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
                 <li><a href="emailto:info@devstudio.com">info@devstudio.com </a></li>
                 <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
             </ul>
